--- a/ManagerM/ui_global_manager_articulos.ui
+++ b/ManagerM/ui_global_manager_articulos.ui
@@ -114,14 +114,7 @@
    <item row="3" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
-      <widget class="ui_advanced_search_articulo" name="busqueda" native="true">
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>0</height>
-        </size>
-       </property>
-      </widget>
+      <widget class="QLineEdit" name="lineEdit_descripcion"/>
      </item>
      <item>
       <spacer name="horizontalSpacer_4">
@@ -178,17 +171,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="lineEdit_marca">
+      <widget class="QComboBox" name="comboBox_marca">
        <property name="minimumSize">
         <size>
          <width>150</width>
          <height>0</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>200</width>
-         <height>16777215</height>
         </size>
        </property>
       </widget>
@@ -224,17 +211,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="lineEdit_medida">
+      <widget class="QComboBox" name="comboBox_medida">
        <property name="minimumSize">
         <size>
          <width>150</width>
          <height>0</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>200</width>
-         <height>16777215</height>
         </size>
        </property>
       </widget>
@@ -257,7 +238,7 @@
    <item row="7" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_8">
      <item>
-      <widget class="QLabel" name="label_4">
+      <widget class="QLabel" name="label_grupo">
        <property name="minimumSize">
         <size>
          <width>40</width>
@@ -270,17 +251,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="lineEdit_grupo">
+      <widget class="QComboBox" name="comboBox_grupo">
        <property name="minimumSize">
         <size>
          <width>150</width>
          <height>0</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>200</width>
-         <height>16777215</height>
         </size>
        </property>
       </widget>
@@ -315,18 +290,7 @@
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>ui_advanced_search_articulo</class>
-   <extends>QWidget</extends>
-   <header>ui_advanced_search_articulo.h</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <tabstops>
-  <tabstop>lineEdit_marca</tabstop>
-  <tabstop>lineEdit_medida</tabstop>
-  <tabstop>lineEdit_grupo</tabstop>
   <tabstop>tableView_articulos</tabstop>
   <tabstop>comboBox_modo</tabstop>
  </tabstops>
