--- a/ManagerM/ui_new_articulo.ui
+++ b/ManagerM/ui_new_articulo.ui
@@ -16,37 +16,15 @@
   <property name="windowTitle">
    <string>Nuevo Artículo</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="Icons.qrc">
+    <normaloff>:/Iconos/Iconos/Tune-Up_Utilities.png</normaloff>:/Iconos/Iconos/Tune-Up_Utilities.png</iconset>
+  </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QLabel" name="label">
-       <property name="font">
-        <font>
-         <weight>75</weight>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>Ingrese los datos del nuevo artículo</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
@@ -65,7 +43,10 @@
      <item row="0" column="0">
       <widget class="QLabel" name="l_codigo_2">
        <property name="text">
-        <string>Código:</string>
+        <string>Código</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
@@ -79,7 +60,10 @@
      <item row="0" column="4">
       <widget class="QLabel" name="l_marca_2">
        <property name="text">
-        <string>Marca:</string>
+        <string>Marca</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
@@ -91,22 +75,29 @@
        <property name="text">
         <string/>
        </property>
+       <property name="icon">
+        <iconset resource="Icons.qrc">
+         <normaloff>:/Iconos/Iconos/sq_plus.png</normaloff>:/Iconos/Iconos/sq_plus.png</iconset>
+       </property>
       </widget>
      </item>
      <item row="0" column="8">
       <widget class="QLabel" name="l_precio_2">
        <property name="text">
-        <string>Precio:  S/.</string>
+        <string>Precio  S/.</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
-     </item>
-     <item row="0" column="9" colspan="2">
-      <widget class="QLineEdit" name="le_precio_2"/>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="l_nombre_2">
        <property name="text">
-        <string>Nombre:</string>
+        <string>Nombre</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
@@ -116,7 +107,10 @@
      <item row="1" column="4">
       <widget class="QLabel" name="l_medida_2">
        <property name="text">
-        <string>Medida:</string>
+        <string>Medida</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
@@ -128,12 +122,19 @@
        <property name="text">
         <string/>
        </property>
+       <property name="icon">
+        <iconset resource="Icons.qrc">
+         <normaloff>:/Iconos/Iconos/sq_plus.png</normaloff>:/Iconos/Iconos/sq_plus.png</iconset>
+       </property>
       </widget>
      </item>
      <item row="1" column="8">
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Proveedor:</string>
+        <string>Proveedor</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
@@ -145,34 +146,11 @@
        <property name="text">
         <string/>
        </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="l_grupo_2">
-       <property name="text">
-        <string>Grupo:</string>
+       <property name="icon">
+        <iconset resource="Icons.qrc">
+         <normaloff>:/Iconos/Iconos/sq_plus.png</normaloff>:/Iconos/Iconos/sq_plus.png</iconset>
        </property>
       </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QComboBox" name="cb_grupo"/>
-     </item>
-     <item row="2" column="3">
-      <widget class="QPushButton" name="btn_add_grupo">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="4">
-      <widget class="QLabel" name="l_stock_2">
-       <property name="text">
-        <string>Stock:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="5" colspan="3">
-      <widget class="QLineEdit" name="le_stock_2"/>
      </item>
      <item row="2" column="2">
       <spacer name="horizontalSpacer_5">
@@ -199,6 +177,46 @@
         </size>
        </property>
       </spacer>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="l_stock_2">
+       <property name="text">
+        <string>Stock</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="4">
+      <widget class="QLabel" name="l_grupo_2">
+       <property name="text">
+        <string>Grupo</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="5">
+      <widget class="QComboBox" name="cb_grupo"/>
+     </item>
+     <item row="2" column="7">
+      <widget class="QPushButton" name="btn_add_grupo">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QSpinBox" name="le_stock_2"/>
+     </item>
+     <item row="0" column="9">
+      <widget class="QDoubleSpinBox" name="le_precio_2">
+       <property name="maximum">
+        <double>100000000.000000000000000</double>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -334,18 +352,14 @@
  </widget>
  <tabstops>
   <tabstop>le_nombre_2</tabstop>
-  <tabstop>cb_grupo</tabstop>
   <tabstop>cb_marca</tabstop>
   <tabstop>cb_medida</tabstop>
-  <tabstop>le_stock_2</tabstop>
-  <tabstop>le_precio_2</tabstop>
   <tabstop>cb_proveedor</tabstop>
   <tabstop>pushButton_agregar</tabstop>
   <tabstop>tableWidget</tabstop>
   <tabstop>btn_aceptar</tabstop>
   <tabstop>btn_borrar</tabstop>
   <tabstop>btn_cancelar</tabstop>
-  <tabstop>btn_add_grupo</tabstop>
   <tabstop>btn_add_marca</tabstop>
   <tabstop>btn_add_medida</tabstop>
   <tabstop>btn_add_proveedor</tabstop>
