--- a/ManagerM/ui_newedit_colaborador.ui
+++ b/ManagerM/ui_newedit_colaborador.ui
@@ -25,6 +25,10 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="Icons.qrc">
+    <normaloff>:/Iconos/Iconos/myspace_alt.png</normaloff>:/Iconos/Iconos/myspace_alt.png</iconset>
+  </property>
   <widget class="QToolBox" name="toolBox">
    <property name="geometry">
     <rect>
@@ -33,6 +37,15 @@
      <width>461</width>
      <height>431</height>
     </rect>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Plain</enum>
+   </property>
+   <property name="lineWidth">
+    <number>1</number>
+   </property>
+   <property name="midLineWidth">
+    <number>0</number>
    </property>
    <property name="currentIndex">
     <number>0</number>
@@ -59,7 +72,7 @@
        <x>10</x>
        <y>310</y>
        <width>254</width>
-       <height>23</height>
+       <height>33</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_17">
@@ -97,7 +110,7 @@
        <x>10</x>
        <y>280</y>
        <width>254</width>
-       <height>23</height>
+       <height>33</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_18">
@@ -135,7 +148,7 @@
        <x>10</x>
        <y>340</y>
        <width>441</width>
-       <height>23</height>
+       <height>33</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_20">
@@ -170,7 +183,7 @@
        <x>10</x>
        <y>250</y>
        <width>241</width>
-       <height>23</height>
+       <height>33</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_22">
@@ -225,7 +238,7 @@
        <x>10</x>
        <y>160</y>
        <width>411</width>
-       <height>23</height>
+       <height>33</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_24">
@@ -256,8 +269,8 @@
       <rect>
        <x>10</x>
        <y>190</y>
-       <width>221</width>
-       <height>22</height>
+       <width>272</width>
+       <height>33</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_25">
@@ -285,7 +298,7 @@
        <x>10</x>
        <y>10</y>
        <width>311</width>
-       <height>23</height>
+       <height>33</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_27">
@@ -319,7 +332,7 @@
        <x>10</x>
        <y>220</y>
        <width>241</width>
-       <height>23</height>
+       <height>33</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_28">
@@ -358,13 +371,13 @@
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>130</y>
        <width>441</width>
-       <height>24</height>
+       <height>35</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
@@ -414,13 +427,13 @@
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>100</y>
        <width>441</width>
-       <height>24</height>
+       <height>35</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -470,13 +483,13 @@
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>70</y>
        <width>441</width>
-       <height>24</height>
+       <height>35</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -526,13 +539,13 @@
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>40</y>
        <width>441</width>
-       <height>24</height>
+       <height>35</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_4">
