modificacion articulos tabla

--- a/ManagerM/ui_new_proveedor.ui
+++ b/ManagerM/ui_new_proveedor.ui
@@ -2,12 +2,15 @@
 <ui version="4.0">
  <class>ui_new_proveedor</class>
  <widget class="QWidget" name="ui_new_proveedor">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>718</width>
-    <height>392</height>
+    <width>749</width>
+    <height>448</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -544,9 +547,6 @@
     </layout>
    </item>
   </layout>
-  <zorder>groupBox_2</zorder>
-  <zorder>groupBox_2</zorder>
-  <zorder></zorder>
   <zorder></zorder>
   <zorder>groupBox_2</zorder>
   <zorder>groupBox</zorder>
